--- a/Client/packages.config
+++ b/Client/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Arci.Networking" version="1.0.4" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.96.0" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.96.0" targetFramework="net45" />
