--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -100,15 +100,15 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     <ClInclude Include="Server\Cards\RangedCard.h" />
     <ClInclude Include="Server\DataHolder.h" />
     <ClInclude Include="Server\Game.h" />
-    <ClInclude Include="Server\networkServices.h" />
+    <ClInclude Include="Server\NetworkServices.h" />
     <ClInclude Include="Server\PacketHandlers\ByteBuffer.h" />
     <ClInclude Include="Server\PacketHandlers\Guid.h" />
     <ClInclude Include="Server\PacketHandlers\Packet.h" />
     <ClInclude Include="Server\PacketHandlers\PacketHandler.h" />
     <ClInclude Include="Server\Player.h" />
     <ClInclude Include="Server\PlayerDefines.h" />
-    <ClInclude Include="Server\serverGame.h" />
-    <ClInclude Include="Server\serverNetwork.h" />
+    <ClInclude Include="Server\ServerGame.h" />
+    <ClInclude Include="Server\ServerNetwork.h" />
     <ClInclude Include="Server\Spells\Spell.h" />
     <ClInclude Include="Server\Spells\SpellAuraEffect.h" />
     <ClInclude Include="Server\Spells\SpellAuraEffectHandler.h" />
@@ -128,7 +128,7 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     <ClCompile Include="Server\Cards\RangedCard.cpp" />
     <ClCompile Include="Server\DataHolder.cpp" />
     <ClCompile Include="Server\Game.cpp" />
-    <ClCompile Include="Server\networkServices.cpp" />
+    <ClCompile Include="Server\NetworkServices.cpp" />
     <ClCompile Include="Server\PacketHandlers\ByteBuffer.cpp" />
     <ClCompile Include="Server\PacketHandlers\CardHandler.cpp" />
     <ClCompile Include="Server\PacketHandlers\ChatHandler.cpp" />
@@ -138,8 +138,8 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     <ClCompile Include="Server\PacketHandlers\PacketHandler.cpp" />
     <ClCompile Include="Server\Player.cpp" />
     <ClCompile Include="Server\Server.cpp" />
-    <ClCompile Include="Server\serverGame.cpp" />
-    <ClCompile Include="Server\serverNetwork.cpp" />
+    <ClCompile Include="Server\ServerGame.cpp" />
+    <ClCompile Include="Server\ServerNetwork.cpp" />
     <ClCompile Include="Server\Spells\Spell.cpp" />
     <ClCompile Include="Server\Spells\SpellAuraEffect.cpp" />
     <ClCompile Include="Server\Spells\SpellAuraEffectHandler.cpp" />
