--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -106,6 +106,11 @@
     <Compile Include="Game\Spells\SpellTargetSelector.cs" />
     <Compile Include="Misc\CardAttackCursors.cs" />
     <Compile Include="Misc\Pair.cs" />
+    <Compile Include="Network\PacketHandlerMisc.cs" />
+    <Compile Include="Network\PacketHandlerGame.cs" />
+    <Compile Include="Network\PacketHandlerCards.cs" />
+    <Compile Include="Network\PacketHandlerSpells.cs" />
+    <Compile Include="Network\PacketHandlerChat.cs" />
     <Compile Include="Security\RSAKey.cs" />
     <Compile Include="UI\SlideShow.cs" />
     <Page Include="MainWindow.xaml">
