--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,10 @@ compiler:
   - g++
 
 before_install:
-  - echo "yes" | sudo add-apt-repository ppa:ubuntu-toolchain-r/test
   - sudo apt-get update
-  - sudo apt-get install sqlite3 libsqlite3-dev
-  - sudo apt-get install openssl libssl-dev
-  - sudo apt-get install build-essential libtool gcc-4.8 g++-4.8
+  - sudo apt-get install libsqlite3-dev
+  - sudo apt-get install libssl-dev
+  - sudo apt-get install gcc-4.8 g++-4.8
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 20
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 20
   - sudo update-alternatives --config gcc
