--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -28,6 +28,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -38,6 +39,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
@@ -98,7 +100,6 @@
     <Compile Include="Game\Spells\SpellEffect.cs" />
     <Compile Include="Game\Spells\SpellTargetSelector.cs" />
     <Compile Include="Misc\CardAttackCursors.cs" />
-    <Compile Include="Misc\Pair.cs" />
     <Compile Include="Network\PacketHandlerMisc.cs" />
     <Compile Include="Network\PacketHandlerGame.cs" />
     <Compile Include="Network\PacketHandlerCards.cs" />
