--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,13 @@ compiler:
   - g++
 
 before_install:
+  - sudo add-apt-repository ppa:jonathonf/gcc-7.1 -y
   - sudo apt-get update
   - sudo apt-get install libsqlite3-dev
   - sudo apt-get install libssl-dev
-  - sudo apt-get install gcc-7.1 g++-7.1
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7.1 20
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7.1 20
+  - sudo apt-get install gcc-7 g++-7
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 20
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 20
   - sudo update-alternatives --config gcc
   - sudo update-alternatives --config g++
 
