--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,8 @@ before_install:
   - sudo apt-get update
   - sudo apt-get install libsqlite3-dev
   - sudo apt-get install libssl-dev
-  - sudo apt-get install gcc-7 g++-7
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 20
+  - sudo apt-get install g++-7
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 20
-  - sudo update-alternatives --config gcc
   - sudo update-alternatives --config g++
 
 script:
