--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -117,6 +117,7 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     <ClInclude Include="Server\Spells\SpellAuraEffect.h" />
     <ClInclude Include="Server\Spells\SpellAuraEffectHandler.h" />
     <ClInclude Include="Server\Spells\SpellAuraEffectTickHandler.h" />
+    <ClInclude Include="Server\Spells\SpellDefines.h" />
     <ClInclude Include="Server\Spells\SpellEffect.h" />
     <ClInclude Include="Server\Spells\SpellTargetSelector.h" />
     <ClInclude Include="Server\StaticHelper.h" />
