--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -113,6 +113,9 @@
     <ClInclude Include="Server\Spells\SpellAuraEffectHandler.h">
       <Filter>Spells</Filter>
     </ClInclude>
+    <ClInclude Include="Server\Spells\SpellDefines.h">
+      <Filter>Spells</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Server\DataHolder.cpp">
