Database handler now uses more robust prepared statements instead of direct string commands

--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -122,6 +122,9 @@
     <ClInclude Include="DataBase\PostgreSQL\DatabaseHandler.h">
       <Filter>Database</Filter>
     </ClInclude>
+    <ClInclude Include="DataBase\PostgreSQL\PreparedStatement.h">
+      <Filter>Database</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Server\DataHolder.cpp">
