--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -176,6 +176,7 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     <ClInclude Include="Crypto\Rsa.h" />
     <ClInclude Include="Crypto\Sha.h" />
     <ClInclude Include="DataBase\PostgreSQL\DatabaseHandler.h" />
+    <ClInclude Include="DataBase\PostgreSQL\PreparedStatement.h" />
     <ClInclude Include="Multiplatform\NetworkCommunication.h" />
     <ClInclude Include="Server\Cards\Card.h" />
     <ClInclude Include="Server\Cards\DefensiveCard.h" />
