Server: added commands to retrieve and add user

--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -176,6 +176,8 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     <ClInclude Include="Crypto\Rsa.h" />
     <ClInclude Include="Crypto\Sha.h" />
     <ClInclude Include="DataBase\PostgreSQL\DatabaseHandler.h" />
+    <ClInclude Include="DataBase\PostgreSQL\DbCommandHandler.h" />
+    <ClInclude Include="DataBase\PostgreSQL\DbEntities.h" />
     <ClInclude Include="DataBase\PostgreSQL\PreparedStatement.h" />
     <ClInclude Include="Multiplatform\NetworkCommunication.h" />
     <ClInclude Include="Server\Cards\Card.h" />
@@ -210,6 +212,7 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     <ClCompile Include="Crypto\Rsa.cpp" />
     <ClCompile Include="Crypto\Sha.cpp" />
     <ClCompile Include="DataBase\PostgreSQL\DatabaseHandler.cpp" />
+    <ClCompile Include="DataBase\PostgreSQL\DbCommandHandler.cpp" />
     <ClCompile Include="Server\Cards\Card.cpp" />
     <ClCompile Include="Server\Cards\DefensiveCard.cpp" />
     <ClCompile Include="Server\Cards\MeleeCard.cpp" />
