Security: Sha256 now uses salt, added test

--- a/Server.Tests/Server.Tests.vcxproj.filters
+++ b/Server.Tests/Server.Tests.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="DatabaseTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SecurityTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
