--- a/Server.Tests/Server.Tests.vcxproj
+++ b/Server.Tests/Server.Tests.vcxproj
@@ -104,12 +104,12 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;$(ProjectDir)..\Server\$(Platform)\$(Configuration)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>DbCommandHandler.obj;DatabaseHandler.obj;Sha.obj;..\Server\DataBase\PostgreSQL\libpq.lib;..\Server\Crypto\OpenSSL\libcrypto.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>ROBOCOPY "$(ProjectDir)..\Server\DLL\PostgreSQL"  "$(TargetDir)." *.dll
-IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%
-</Command>
+      <Command>for /d  %%i in ($(ProjectDir)..\Server\DLL\*) do ROBOCOPY "%%i"  "$(TargetDir)." *.dll
+IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -124,13 +124,12 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;$(ProjectDir)..\Server\x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>DbCommandHandler.obj;DatabaseHandler.obj;..\Server\DataBase\PostgreSQL\libpq.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;$(ProjectDir)..\Server\$(Platform)\$(Configuration)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>DbCommandHandler.obj;DatabaseHandler.obj;Sha.obj;..\Server\DataBase\PostgreSQL\libpq.lib;..\Server\Crypto\OpenSSL\libcrypto.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>ROBOCOPY "$(ProjectDir)..\Server\DLL\PostgreSQL"  "$(TargetDir)." *.dll
-IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%
-</Command>
+      <Command>for /d  %%i in ($(ProjectDir)..\Server\DLL\*) do ROBOCOPY "%%i"  "$(TargetDir)." *.dll
+IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -148,12 +147,12 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;$(ProjectDir)..\Server\$(Platform)\$(Configuration)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>DbCommandHandler.obj;DatabaseHandler.obj;Sha.obj;..\Server\DataBase\PostgreSQL\libpq.lib;..\Server\Crypto\OpenSSL\libcrypto.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>ROBOCOPY "$(ProjectDir)..\Server\DLL\PostgreSQL"  "$(TargetDir)." *.dll
-IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%
-</Command>
+      <Command>for /d  %%i in ($(ProjectDir)..\Server\DLL\*) do ROBOCOPY "%%i"  "$(TargetDir)." *.dll
+IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -171,12 +170,12 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;$(ProjectDir)..\Server\$(Platform)\$(Configuration)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>DbCommandHandler.obj;DatabaseHandler.obj;Sha.obj;..\Server\DataBase\PostgreSQL\libpq.lib;..\Server\Crypto\OpenSSL\libcrypto.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>ROBOCOPY "$(ProjectDir)..\Server\DLL\PostgreSQL"  "$(TargetDir)." *.dll
-IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%
-</Command>
+      <Command>for /d  %%i in ($(ProjectDir)..\Server\DLL\*) do ROBOCOPY "%%i"  "$(TargetDir)." *.dll
+IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -184,6 +183,7 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="SecurityTests.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
