Client: moved enums to login assembly, added create account viewmodel

--- a/Client.UI/Client.UI.csproj
+++ b/Client.UI/Client.UI.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Client.Logic\Client.Logic.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Resources\Texts.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
