--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -72,15 +72,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Enums\AttackResult.cs" />
-    <Compile Include="Enums\CardStats.cs" />
-    <Compile Include="Enums\CombatLogTypes.cs" />
-    <Compile Include="Enums\CursorTypes.cs" />
-    <Compile Include="Enums\SelectionType.cs" />
-    <Compile Include="Enums\SpellCastResult.cs" />
-    <Compile Include="Enums\SpellAttributes.cs" />
-    <Compile Include="Enums\SpellTargets.cs" />
-    <Compile Include="Enums\UserResult.cs" />
     <Compile Include="Game\Cards\DefensiveCard.cs" />
     <Compile Include="Game\Cards\MeleeCard.cs" />
     <Compile Include="Game\Cards\PlayableCard.cs" />
@@ -108,11 +99,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Data\DataHolder.cs" />
-    <Compile Include="Enums\ChatTypes.cs" />
-    <Compile Include="Enums\CMSGPackets.cs" />
-    <Compile Include="Enums\CreatureTypes.cs" />
-    <Compile Include="Enums\EnumExtension.cs" />
-    <Compile Include="Enums\SelectCardFailReason.cs" />
     <Compile Include="Game\Cards\Card.cs" />
     <Compile Include="Game\ChatHandler.cs" />
     <Compile Include="Game\ClientGame.cs" />
@@ -179,6 +165,12 @@
     <Resource Include="Assets\Cursors\Cursor_Arrow.cur" />
     <Resource Include="Assets\Cursors\Cursor_Staff.cur" />
     <Resource Include="Assets\Cursors\Cursor_Sword.cur" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Client.Logic\Client.Logic.csproj">
+      <Project>{63130c1d-d020-4ced-a37f-12a2257ba6fb}</Project>
+      <Name>Client.Logic</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
