--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -191,6 +191,7 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     <ClInclude Include="Server\Spells\SpellTargetSelector.h" />
     <ClInclude Include="Server\Spells\SpellValidator.h" />
     <ClInclude Include="Server\StaticHelper.h" />
+    <ClInclude Include="Server\ConnectedUser.h" />
     <ClInclude Include="Settings\SettingsHandler.h" />
     <ClInclude Include="Shared\SharedDefines.h" />
   </ItemGroup>
@@ -229,6 +230,7 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     <ClCompile Include="Server\Spells\SpellTargetSelector.cpp" />
     <ClCompile Include="Server\Spells\SpellValidator.cpp" />
     <ClCompile Include="Server\StaticHelper.cpp" />
+    <ClCompile Include="Server\ConnectedUser.cpp" />
     <ClCompile Include="Settings\SettingsHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
