Implemented login to main menu in new client

--- a/Client.UI/Client.UI.csproj
+++ b/Client.UI/Client.UI.csproj
@@ -40,6 +40,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="Views\Game\MainMenu.xaml">
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="Views\User\Login.xaml">
       <SubType>Designer</SubType>
     </Page>
