Created tabcontrol page for main game

--- a/Client.UI/Client.UI.csproj
+++ b/Client.UI/Client.UI.csproj
@@ -41,6 +41,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="Views\Game\GamePage.xaml">
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="Views\Game\SelectCardsViewModel.xaml">
       <SubType>Designer</SubType>
     </Page>
