Added base logic for chat

--- a/Client.UI/Client.UI.csproj
+++ b/Client.UI/Client.UI.csproj
@@ -44,6 +44,9 @@
     <Page Update="Views\Game\GamePage.xaml">
       <SubType>Designer</SubType>
     </Page>
+    <Page Update="Views\Game\Chat.xaml">
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="Views\Game\SelectCards.xaml">
       <SubType>Designer</SubType>
     </Page>
