Joining game chat when joining game

--- a/Client.UI/Client.UI.csproj
+++ b/Client.UI/Client.UI.csproj
@@ -8,13 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\GameChat.png" />
     <None Remove="Images\GeneralChat.PNG" />
     <None Remove="Views\Login.xaml" />
     <None Remove="Views\User\CreateAccount.xaml" />
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Images\GeneralChat.PNG" />
+    <Resource Include="Images\GameChat.png" />
+    <Resource Include="Images\GeneralChat.png" />
   </ItemGroup>
 
   <ItemGroup>
